# wjp-judicial-independence

./: .gitignore  README.md  app.py  pyproject.toml
data/interim/module1/: df_embeddings_strategy_judicial_independence.parquet  df_llm-api_strategy_judicial_independence.parquet  df_llm_strategy_judicial_independence.parquet
data/interim/module2/sentiment/: df_m1_embeddings_strategy_judicial_independence.parquet  df_m1_llm-api_strategy_judicial_independence.parquet  df_m1_llm_strategy_judicial_independence.parquet
data/interim/module2/topic_modelling/bertopic_HUNGARY_m1_embeddings/: ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
data/interim/module2/topic_modelling/bertopic_HUNGARY_m1_llm/: ctfidf.safetensors  ctfidf_config.json  (+2 more)
data/interim/module2/topic_modelling/bertopic_HUNGARY_m1_llm-api/: ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
data/interim/module3/: color_map_HUNGARY_embeddings.json  color_map_HUNGARY_llm-api.json  color_map_ITALY_embeddings.json  color_map_ITALY_llm.json  color_map_POLAND_llm-api.json  color_map_general_llm-api.json  color_map_general_llm.json  fig_bar_HUNGARY_embeddings.json  fig_bar_HUNGARY_llm-api.json  fig_bar_HUNGARY_llm.json  fig_bar_ITALY_embeddings.json  fig_bar_ITALY_llm-api.json  fig_bar_ITALY_llm.json  fig_bar_POLAND_embeddings.json  fig_bar_POLAND_llm-api.json  fig_bar_POLAND_llm.json  fig_bar_general_embeddings.json  fig_bar_general_llm-api.json  fig_bar_general_llm.json  fig_tpc_HUNGARY_embeddings_pillar.json  fig_tpc_HUNGARY_embeddings_sentiment.json  fig_tpc_HUNGARY_llm-api_pillar.json  fig_tpc_HUNGARY_llm-api_sentiment.json  fig_tpc_HUNGARY_llm_pillar.json  fig_tpc_HUNGARY_llm_sentiment.json  fig_tpc_ITALY_embeddings_pillar.json  fig_tpc_ITALY_embeddings_sentiment.json  fig_tpc_ITALY_llm-api_pillar.json  fig_tpc_ITALY_llm-api_sentiment.json  fig_tpc_ITALY_llm_pillar.json  fig_tpc_ITALY_llm_sentiment.json  fig_tpc_POLAND_embeddings_pillar.json  fig_tpc_POLAND_embeddings_sentiment.json  fig_tpc_POLAND_llm-api_pillar.json  fig_tpc_POLAND_llm-api_sentiment.json  fig_tpc_POLAND_llm_pillar.json  fig_tpc_POLAND_llm_sentiment.json  fig_tpc_general_embeddings_country.json  fig_tpc_general_llm-api_country.json  fig_tpc_general_llm_country.json  (+21 more)
data/raw/: hungary.json  italy.json  poland.json
notebooks/: module1_classification.ipynb  module2_sentiment.ipynb  module2_topic_modelling.ipynb  module3_visualization_and_analysis.ipynb
scripts/: pipeline.py  precompute_topics_per_class.py
src/wjp_judicial_independence/: __init__.py  analysis.py  classifier.py  config.py  plot.py  preprocessing.py  sentiment.py  utils.py
(+38 files in other folders)
