[project]
name = "wjp-judicial-independence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Dashboard-only dependencies
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polars[rtcompat]>=1.39.3",
    "pyarrow>=23.0.1",
    "streamlit>=1.45.0",
    "wordcloud>=1.9.6",
]

[project.optional-dependencies]
pipeline = [
    # Full reproducibility: pipeline + precompute script
    "accelerate>=1.13.0",
    "anthropic>=0.52.0",
    "bertopic[spacy]>=0.17.4",
    "bitsandbytes>=0.49.2",
    "openai>=2.30.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
]

[project.scripts]
wjp-judicial-independence = "wjp_judicial_independence:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "ipdb>=0.13.13",
    "ipython>=9.12.0",
    "jedi-language-server>=0.46.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.8",
]
